add pre-built material theme.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,7 +42,7 @@ p {
   height: 60px;
   display: flex;
   align-items: center;
-  background-color: #492c2c;
+  background-color: #564408;
   color: white;
   font-weight: 600;
 }
