--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 //
+@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 //// Custom Theming for Angular Material
 //// For more information: https://material.angular.io/guide/theming
 //@use '@angular/material' as mat;
