--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,10 +1,16 @@
-:host {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 14px;
-  color: #333;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+//:host {
+//  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+//  font-size: 14px;
+//  color: #333;
+//  //box-sizing: border-box;
+//  -webkit-font-smoothing: antialiased;
+//  -moz-osx-font-smoothing: grayscale;
+//}
+
+body{
+  margin: 0;
+  border: 0;
+  padding: 0;
 }
 
 h1,
@@ -31,49 +37,26 @@ p {
 }
 
 .navList{
+  float: right;
   margin-right: 20px;
 }
 
 .toolbar {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
-  display: flex;
+  //position: absolute;
+  //top: 0;
+  //left: 0;
+  //right: 0;
+  //height: 60px;
+  //display: flex;
+  display: contents;
   align-items: center;
-  background-color: #564408;
-  color: white;
+  //background-color: #564408;
+  //color: white;
   font-weight: 600;
+  flex-wrap: wrap;
+  padding: 8px 16px;
 }
 
-.toolbar img {
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo {
-  height: 40px;
-  margin: 0 8px;
-}
-
-.toolbar #youtube-logo {
-  height: 40px;
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover,
-.toolbar #youtube-logo:hover {
-  opacity: 0.8;
-}
-
-.content {
-  display: flex;
-  margin: 82px auto 32px;
-  padding: 0 16px;
-  max-width: 960px;
-  flex-direction: column;
-  align-items: center;
-}
 a,
 a:visited,
 a:hover {
@@ -83,16 +66,4 @@ a:hover {
 
 a:hover {
   color: #125699;
-}
-
-footer {
-  margin-top: 8px;
-  display: flex;
-  align-items: center;
-  line-height: 20px;
-}
-
-footer a {
-  display: flex;
-  align-items: center;
 }
