update routing module, create material module and move demo code to list component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <span>Welcome</span>
     <div class="spacer"></div>
     <div class="navList">
-      <a routerLink="/demo">
+      <a routerLink="/list">
         <mat-icon aria-hidden="false" class="material-icons" aria-label="Angular Demo">view_list</mat-icon>
       </a>
     </div>
