--- a/src/app/demos/demos.component.html
+++ b/src/app/demos/demos.component.html
@@ -1,22 +1,1 @@
-<!--<div *ngIf="shouldRun"  [class.example-is-mobile]="mobileQuery.matches" class="example-container">-->
-<mat-toolbar class="example-toolbar" color="primary">
-  <button (click)="snav.toggle()" mat-icon-button>
-    <mat-icon>menu</mat-icon>
-  </button>
-  <h1 class="example-app-name">Responsive App</h1>
-</mat-toolbar>
-
-<mat-sidenav-container class="example-sidenav-container"
-                       [style.marginTop.px]="mobileQuery.matches ? 0 : 0">
-  <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
-               [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
-    <mat-nav-list>
-      <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
-    </mat-nav-list>
-  </mat-sidenav>
-
-  <mat-sidenav-content>
-    <p *ngFor="let content of fillerContent">{{content}}</p>
-  </mat-sidenav-content>
-</mat-sidenav-container>
-<!--</div>-->
+<p>demos works!</p>
