--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -29,3 +29,10 @@ h1.example-app-name {
      `<body>` to be our scrolling element for mobile layouts. */
   flex: 1 0 auto;
 }
+
+.mat-sidenav-content{
+  display: flex;
+  position: inherit;
+  height: 100vh;
+}
+
