--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,16 +1,7 @@
-//:host {
-//  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-//  font-size: 14px;
-//  color: #333;
-//  //box-sizing: border-box;
-//  -webkit-font-smoothing: antialiased;
-//  -moz-osx-font-smoothing: grayscale;
-//}
-
-body{
-  margin: 0;
-  border: 0;
-  padding: 0;
+:host {
+  font-size: 14px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
