add airport-search component

--- a/src/app/list/list.component.scss
+++ b/src/app/list/list.component.scss
@@ -31,8 +31,11 @@ h1.example-app-name {
 }
 
 .mat-sidenav-content{
-  display: flex;
-  position: inherit;
+  //display: flex;
+  //position: inherit;
   height: 100vh;
+  margin: 5vh;
 }
+
+
 
