--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -3,7 +3,7 @@
   <button (click)="snav.toggle()" mat-icon-button>
     <mat-icon>menu</mat-icon>
   </button>
-  <h1 class="example-app-name">{{listTitle}}</h1>
+  <h1 class="example-app-name">{{title}}</h1>
 </mat-toolbar>
 
 <mat-sidenav-container class="example-sidenav-container"
@@ -11,12 +11,14 @@
   <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
                [fixedInViewport]="mobileQuery.matches" fixedTopGap="56">
     <mat-nav-list>
-      <a mat-list-item routerLink="." *ngFor="let nav of fillerNav">{{nav}}</a>
+      <a mat-list-item routerLink="{{list.routeLink}}" *ngFor="let list of NavList">{{list.name}}</a>
     </mat-nav-list>
   </mat-sidenav>
 
-  <mat-sidenav-content>
-    <p *ngFor="let content of fillerContent">{{content}}</p>
+  <mat-sidenav-content class="mat-sidenav-content">
+    <p>
+      <router-outlet></router-outlet>
+    </p>
   </mat-sidenav-content>
 </mat-sidenav-container>
 <!--</div>-->
