remove input autofill white color in Chrome browser

--- a/src/app/list/airport-search/airport-search.component.scss
+++ b/src/app/list/airport-search/airport-search.component.scss
@@ -1,3 +1,9 @@
 .example-form-field {
   width: 80%;
 }
+
+//https://stackoverflow.com/a/68240841
+input:-webkit-autofill,
+input:-webkit-autofill:focus {
+  transition: background-color 600000s 0s, color 600000s 0s;
+}
