--- a/src/app/list/airport-search/airport-search.component.html
+++ b/src/app/list/airport-search/airport-search.component.html
@@ -3,9 +3,9 @@
     <mat-form-field class="example-form-field" appearance="legacy">
       <mat-label>Search Airport by IATA Number</mat-label>
       <input matInput aria-label="Search" (keyup.enter)="keySearch()" type="text" name="search" [(ngModel)]="search">
-      <mat-button-toggle  matSuffix aria-label="Submit" (click)="searchSubmit()" mat-icon-button >
+      <button mat-button matSuffix aria-label="Submit" (click)="searchSubmit()" mat-icon-button >
         <mat-icon>search</mat-icon>
-      </mat-button-toggle>
+      </button>
     </mat-form-field>
   </form>
   <ng-container *ngIf="airportInfo">
@@ -18,8 +18,11 @@
       Contact: {{airportInfo.phone}}<br>
       ICAO No: {{airportInfo.icao}}
     </p>
-    <mat-divider></mat-divider>
-    <mat-divider></mat-divider>
   </ng-container>
+  <ng-container *ngIf="errorMessage">
+    Message: {{errorMessage.error.text}}
+  </ng-container>
+  <mat-divider></mat-divider>
+  <mat-divider></mat-divider>
 </div>
 
